syntax = "proto3";

package com.jin.proto;

option java_multiple_files = true;
option java_package="com.jin.proto";
option java_outer_classname = "Student";

service StudentService
{
    rpc GetStudentByUsername (MyRequest) returns (MyResponse) {}

    rpc getStudentsByAge (StudentRequest) returns (stream StudentResponse) {}

    rpc saveStudents(stream StudentInfoRequest) returns (StudentInfoResponse) {}

    rpc BiTalk(stream StreamRequest) returns (stream StreamResponse) {}
}

message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 1;
}

message StudentRequest {
    int32 age = 1;
}

message StudentResponse {
    string name = 1;
    int32 age = 2;
    string city = 3;
}

message StudentInfoRequest {
    string name = 1;
    int32 age = 2;
}

message StudentInfoResponse {
    string status = 1;
}

message StreamRequest {
    string request_info = 1;
}

message StreamResponse {
    string response_info = 1;
}